--- a/index.html
+++ b/index.html
@@ -1,16 +1,20 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="./src/styles/main.css">
-    <title>Custom Search Dropdown Demo</title>
-</head>
-<body class="p-8">
-    <div id="app" class="max-w-md mx-auto">
-        <h1 class="text-2xl font-bold mb-4">Custom Dropdown Demo</h1>
-    </div>
-    <script type="module" src="./src/js/main.js"></script>
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link
+			rel="stylesheet"
+			href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:wght,FILL@300,0..1&display=swap"
+		/>
+		<script src="https://cdn.tailwindcss.com"></script>
+		<link rel="stylesheet" href="./src/styles/main.css" />
+		<title>Custom Search Dropdown Demo</title>
+	</head>
+	<body class="p-8">
+		<div id="app" class="max-w-md mx-auto">
+			<h1 class="text-2xl font-bold mb-4">Custom Dropdown Demo</h1>
+		</div>
+		<script type="module" src="./src/js/main.js"></script>
+	</body>
 </html>
